[package]
name = "sol_dex_data_hub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
bincode = "1.3.3"
bitvec = "1.0.1"
borsh = "1.5.7"
bs58 = "0.5.1"
bytemuck = "1.21.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
maplit = "1.0.2"
num-bigint = "0.4.6"
openssl = { version = "0.10.71", features = ["vendored"] }
redis = { version = "0.29.0", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", features = ["http2", "json", "gzip"] }
serde = "1.0.218"
serde_json = "1.0.139"
serde_with = "3.12.0"
solana-account-decoder-client-types = "=2.1.16"
solana-pubsub-client = "=2.1.16"
solana-rpc-client = "=2.1.16"
solana-rpc-client-api = "=2.1.16"
solana-sdk = "=2.1.16"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["decompression-gzip", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = { version = "5.0.0", features = ["plugin"] }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
